Proyecto 2/yml/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p2sopes-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: p2sopes-kafka
  template:
    metadata:
      labels:
        app: p2sopes-kafka
    spec:
      containers:
      - name: kafka-producer
        image: randycan/kafka-producer
        ports:
        - containerPort: 8080
      - name: kafka-consumer
        image: randycan/kafka-consumer
