Proyecto 2/yml/error-injector.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: error-injector
  namespace: project
  labels:
    app: error-injector
spec:
  selector:
    matchLabels:
      app: error-injector
  replicas: 1
  template:
    metadata:
      labels:
        app: error-injector
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: error-injector
---
apiVersion: v1
kind: Service
metadata:
  name: error-injector
  namespace: project
spec:
  ports:
  - name: service
    port: 8080
  selector:
    app: error-injector
