Proyecto 2/yml/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sopes1p2-ingress
  namespace: project
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;

spec:
 rules:
  - host: traffyc.sopes1g15.tk
    http:
      paths:
      - backend:
          serviceName: p2sopes-services-kafka
          servicePort: 8080

            # p2sopes-services 8080
            # p2sopes-services-grpc 8080
            # p2sopes-pubsub 8080
